corrected style for calendar input

--- a/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
@@ -32,11 +32,11 @@
         <p:row>
             <div>
                 <p:outputLabel for="startdate" value="#{msgs.startdate}" />
-                <p:calendar id="startdate" class="input" value="#{ProjekteForm.myProjekt.startDate}" showOn="button"/>
+                <p:calendar id="startdate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.startDate}" showOn="button"/>
             </div>
             <div>
                 <p:outputLabel for="enddate" value="#{msgs.enddate}" />
-                <p:calendar id="enddate" class="input" value="#{ProjekteForm.myProjekt.endDate}" showOn="button"/>
+                <p:calendar id="enddate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.endDate}" showOn="button"/>
             </div>
             <div>
                 <p:outputLabel for="projectIsArchived" value="#{msgs.projectIsArchived}" />
