added Pages on adding new docStruc elements and moved getaddableMetadata from 2.x

--- a/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadata.xhtml
@@ -33,7 +33,7 @@
 
                 <p:column>
                     <p:inputTextarea value="#{item.value}" rows="2" style="width:98%;">
-                        <p:ajax event="blur" />
+                        <p:ajax event="blur" update="tabView:structureData:structureDataTable"/>
                     </p:inputTextarea>
                 </p:column>
 
